- Fix alert text on its own line - mousewheelMode to require shift or not to zoom - Enforce Number for interval.x - Increased predictIdClickRadius = 60 - New Rect get current tag ID if defined -

--- a/css/custom.css
+++ b/css/custom.css
@@ -495,3 +495,7 @@ fieldset[disabled] .btn-window.focus {
   fill: #008000;
   font-weight: bold;
 }
+
+#alerttext {
+  min-width: 200px;
+}
